assert(Compile::current()->live_nodes() < Compile::current()->max_node_limit()) failed: Live Node limit exceeded limit

XMLWordPrintable

    • 11
    • b28

        The attached test crashes.
        To reproduce run:
        java -Xmx1G Test

        Test passes if -Xcomp is enabled as well for -XX:-TieredCompilation

          1. FuzzerUtils.java
            13 kB
          2. hs_err_pid15423.log
            66 kB
          3. replay_pid15423.log
            22 kB
          4. Test.java
            8 kB

              Assignee:
              Patric Hedlin (Inactive)
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: