8210392: assert(Compile::current()->live_nodes() < Compile::current()->max_node_limit()) failed: Live Node limit exceeded limit

Avoid excessive split-if.

Reviewed-by: thartmann, neliasso